# ParaDance

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: pre-commit.yaml
docs/: Makefile  make.bat
docs/source/: api_reference.rst  conf.py  index.rst  installation.rst
docs/source/api_reference/: hiveviewer.dataloader.BaseDataLoader.rst  hiveviewer.dataloader.CSVLoader.rst  hiveviewer.dataloader.ExcelLoader.rst  hiveviewer.evaluation.Calculator.rst  hiveviewer.optimization.BaseObjective.rst  hiveviewer.optimization.MultipleObjective.rst  hiveviewer.sampling.BaseSampler.rst  hiveviewer.sampling.FrequencySampler.rst  hiveviewer.sampling.GiniSampler.rst  hiveviewer.visualization.BaseVennPloter.rst  hiveviewer.visualization.LorenzCurveGini.rst  hiveviewer.visualization.ProfolioPlotter.rst  hiveviewer.visualization.TrisurfPloter.rst  hiveviewer.visualization.Venn2Ploter.rst  hiveviewer.visualization.Venn3Ploter.rst  paradance.dataloader.BaseDataLoader.rst  paradance.dataloader.BaseDataLoaderConfig.rst  paradance.dataloader.CSVLoader.rst  paradance.dataloader.ExcelLoader.rst  paradance.evaluation.BaseCalculator.rst  paradance.evaluation.Calculator.rst  paradance.evaluation.LogarithmPCACalculator.rst  paradance.evaluation.calculate_distinct_count_portfolio_concentration.rst  paradance.evaluation.calculate_portfolio_concentration.rst  paradance.optimization.BaseObjective.rst  (+13 more)
hiveviewer/visualization/: __init__.py  lorenz_curve.py
src/hiveviewer/: __init__.py
src/paradance/: __init__.py
(+74 files in other folders)
