[tool.poetry]
name = "paradance"
version = "0.5.2"
description = "Offers a toolset for comprehensive, multi-faceted large-scale data analysis and optimizations."
authors = ["Yin Cheng <yin.sjtu@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yinsn/paradance"
repository = "https://github.com/yinsn/paradance"
packages = [{ include = "paradance", from = "src" }]

[tool.poetry.dependencies]
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
joblib = "^1.3.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
mixician = "^0.1.20"
numpy = "^1.26.4"
openpyxl = "^3.1.2"
optuna = "^3.5.0"
pandas = "^2.2.1"
pydantic = "^2.6.4"
python = "^3.9"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
sqlalchemy = "^2.0.28"
tqdm = "^4.66.2"
sphinx-rtd-theme = "^2.0.0"
nbsphinx = "^0.9.3"
docutils = "^0.20.1"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
